--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "devDependencies": {
     "chalk": "^4.1.2",
+    "cronometro": "^1.0.2",
     "find-my-way": "^5.0.0"
   }
 }
