--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,6 @@ wasm-bindgen-test = "0.3.13"
 [profile.release]
 # Tell `rustc` to optimize for small code size.
 opt-level = 3
+lto = true
+codegen-units = 1
+panic = "abort"
