--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "chalk": "^4.1.2",
     "cronometro": "^1.0.2",
     "find-my-way": "^5.0.0"
+  },
+  "dependencies": {
+    "quick-lru": "^5.1.1"
   }
 }
